--- a/res/xml/quick_settings_panel.xml
+++ b/res/xml/quick_settings_panel.xml
@@ -82,6 +82,11 @@
             android:entries="@array/entries_location_widget"
             android:entryValues="@array/values_location_widget" />
 
+        <CheckBoxPreference
+            android:key="flip_qs_tiles"
+            android:title="@string/flip_qs_tiles_title"
+            android:summary="@string/flip_qs_tiles_summary" />
+
         </PreferenceCategory>
 
     <PreferenceCategory
