Add XOS Version Info
Signed-off-by: Estiko <estiko@mediaqu.com>

--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -17,4 +17,8 @@
     <string name="flip_qs_tiles_title">Flip tiles</string>
     <string name="flip_qs_tiles_summary">Flips the tiles on touch</string>
 
+    <!-- XoplaX OS Version -->
+    <string name="xoplax_version">xoplax version</string>
+    <string name="xoplax_version_default">Unknown</string>
+
 </resources>
