--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -129,7 +129,13 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/model_number"
                 android:summary="@string/device_info_default"/>
-                
+
+        <!-- XoplaX OS version -->
+        <Preference android:key="xoplax_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/xoplax_version"
+                android:summary="@string/xoplax_version_default" />
+
         <!-- Mod version -->
         <Preference android:key="mod_version"
                 style="?android:preferenceInformationStyle"
