--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -27,6 +27,9 @@
     <string name="flip_qs_tiles_title">Flip tiles</string>
     <string name="flip_qs_tiles_summary">Flips the tiles on touch</string>
 
+    <!-- QS Power menu -->
+    <string name="title_tile_power">Power Menu</string>
+
     <!--  Recents clear all -->
     <string name="recents_panel_settings_title" >Recents panel settings</string>
     <string name="show_recent_clear_all_button_title">Show clear all button</string>
