--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -52,6 +52,24 @@
     <string name="recent_clear_all_button_location_bottom_left">Bottom left</string>
     <string name="recent_clear_all_button_location_bottom_right">Bottom right</string>
 
+    <!-- Smooth ProgressBar -->
+    <string name="progressbar_title">Custom progressBar</string>
+    <string name="progressbar_mirror_title">Mirror mode</string>
+    <string name="progressbar_reverse_title">Reversed</string>
+    <string name="progressbar_speed_title">Speed</string>
+    <string name="progressbar_width_title">Stroke width</string>
+    <string name="progressbar_length_title">Separator length</string>
+    <string name="progressbar_count_title">Sections count</string>
+    <string name="progressbar_color_1_title">Color1</string>
+    <string name="progressbar_color_2_title">Color2</string>
+    <string name="progressbar_color_3_title">Color3</string>
+    <string name="progressbar_color_4_title">Color4</string>
+    <string name="sample_progressbar_text">ProgressBar : preview</string>
+    <string name="progressbar_reset_message">Reset progress bar style to default?</string>
+
+    <!-- XoplaX OS Settings -->
+    <string name="xoplax_settings_title">XoplaX Inside</string>
+
     <!-- XoplaX OS Version -->
     <string name="xoplax_version">xoplax version</string>
     <string name="xoplax_version_default">Unknown</string>
