--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -96,6 +96,19 @@
             android:title="@string/see_through_title"
             android:summary="@string/see_through_summary" />
 
+        <!-- Blur Effect -->
+        <CheckBoxPreference
+            android:key="lockscreen_blur_behind"
+            android:title="@string/blur_behind_title"
+            android:summary="@string/blur_behind_summary" />
+
+        <SeekBarPreference
+            android:key="lockscreen_blur_radius"
+            android:title="@string/blur_radius_title"
+            android:summary="@string/blur_radius_summary"
+            android:max="25"
+            android:defaultValue="12" />
+
         <PreferenceScreen
             android:key="keyguard_style"
             android:fragment="com.android.settings.xoplax.LockscreenStyle"
