--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -90,6 +90,12 @@
         android:title="@string/misc_category"
         android:key="lockscreen_misc_category" >
 
+        <Preference
+            android:fragment="com.android.settings.xoplax.lsn.LockscreenNotifications"
+            android:key="lockscreen_notifications"
+            android:summary="@string/lockscreen_notifications_summary"
+            android:title="@string/Lockscreen_notifications_header" />
+
         <!-- See Through -->
         <CheckBoxPreference
             android:key="lockscreen_see_through"
