--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -26,6 +26,9 @@
     <string name="set">Set</string>
     <string name="color_default">Default</string>
 
+    <!-- Lockscreen battery ring -->
+    <string name="battery_around_lockscreen_ring">Battery around unlock ring</string>
+
     <!-- Lockscreen blur -->
     <string name="blur_radius_title">Blur Radius</string>
     <string name="blur_radius_summary">Set the blur radius for the blur effect</string>
