--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -26,6 +26,9 @@
     <string name="set">Set</string>
     <string name="color_default">Default</string>
 
+    <!-- Kernel Adiutor -->
+    <string name="kernel_adiutor_title">Kernel Adiutor</string>
+
     <!-- Lockscreen battery ring -->
     <string name="battery_around_lockscreen_ring">Battery around unlock ring</string>
 
