--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -111,8 +111,9 @@
     <string name="flip_qs_tiles_title">Flip tiles</string>
     <string name="flip_qs_tiles_summary">Flips the tiles on touch</string>
 
-    <!-- QS Power menu -->
-    <string name="title_tile_power">Power Menu</string>
+    <!-- QS and navring Power menu -->
+    <string name="title_tile_power">Power Menu</string> 
+    <string name="navring_action_power_menu">Power menu</string>
 
     <!--  Recents clear all -->
     <string name="recents_panel_settings_title" >Recents panel settings</string>
