LN: Rework Lockscreen Notification
Signed-off-by: Estiko <estiko@mediaqu.com>

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -96,10 +96,9 @@
         android:key="lockscreen_misc_category" >
 
         <Preference
-            android:fragment="com.android.settings.xoplax.lsn.LockscreenNotifications"
+            android:fragment="com.android.settings.xoplax.LockscreenNotifications"
             android:key="lockscreen_notifications"
-            android:summary="@string/lockscreen_notifications_summary"
-            android:title="@string/Lockscreen_notifications_header" />
+            android:summary="@string/lockscreen_notifications_summary" />
 
         <!-- Battery around unlock ring -->
         <CheckBoxPreference
