--- a/res/xml/lockscreen_notifications.xml
+++ b/res/xml/lockscreen_notifications.xml
@@ -1,10 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2013 OmniKang
+ 
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
+ 
+ http://www.apache.org/licenses/LICENSE-2.0
+ 
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+ -->
+
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/lockscreen_notifications"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceCategory
-        android:key="category_general"
         android:title="@string/general" >
         <CheckBoxPreference
             android:key="lockscreen_notifications"
@@ -47,7 +62,7 @@
             android:dependency="lockscreen_notifications"
             android:summary="@string/dismiss_all_summary" />
 
-        <com.android.settings.xoplax.lsn.AppMultiSelectListPreference
+        <com.android.settings.xoplax.AppMultiSelectListPreference
             android:key="excluded_apps"
             android:persistent="false"
             android:title="@string/excluded_apps_title"
@@ -65,18 +80,12 @@
             android:dependency="lockscreen_notifications"
             android:defaultValue="30" />
 
-        <com.android.settings.xoplax.lsn.NumberPickerPreference
+        <com.android.settings.xoplax.NumberPickerPreference
             android:key="notifications_height"
             android:dialogMessage="@string/notifications_height"
             android:title="@string/notifications_height"
             android:dependency="lockscreen_notifications"
             android:summary="@string/notifications_height_summary" />
-
-        <CheckBoxPreference
-            android:key="dynamic_width"
-            android:title="@string/dynamic_width"
-            android:dependency="lockscreen_notifications"
-            android:summary="@string/dynamic_width_summary" />
 
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="notification_color"
@@ -105,3 +114,4 @@
             android:summary="@string/force_expanded_view_summary" />
     </PreferenceCategory>
 </PreferenceScreen>
+
