--- a/res/values/xos_attrs.xml
+++ b/res/values/xos_attrs.xml
@@ -22,6 +22,8 @@
         <attr name="minimun" format="integer" />
         <attr name="unitsLeft" format="string|reference" />
         <attr name="unitsRight" format="string|reference" />
+        <attr name="minm" format="integer" />
+        <attr name="interval" format="integer" />
     </declare-styleable>
 
 </resources>
