--- a/res/values/xos_arrays.xml
+++ b/res/values/xos_arrays.xml
@@ -93,6 +93,29 @@
         <item>0</item>
     </string-array>
 
+    <!-- Notification drawer background -->
+    <string-array name="notification_wallpaper_entries">
+        <item>@string/notification_background_color_fill</item>
+        <item>@string/notification_background_custom_image</item>
+        <item>@string/notification_background_default_wallpaper</item>
+    </string-array>
+
+    <string-array name="notification_wallpaper_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="notification_wallpaper_landscape_entries">
+        <item>@string/notification_background_custom_image</item>
+        <item>@string/notification_background_default_wallpaper</item>
+    </string-array>
+
+    <string-array name="notification_wallpaper_landscape_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- Recents RAM bar-->
     <string-array name="entries_ram_bar_mode">
         <item>@string/ram_bar_none</item>
