--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -27,6 +27,7 @@
     <string name="color_default">Default</string>
 
     <!-- General strings -->
+    <string name="default_string">Default</string>
     <string name="recents_panel_settings_title" >Recents panel settings</string>
     <string name="reset">Reset</string>
 
