QS: Smart Pull Down (1/2)
Signed-off-by: Estiko <estiko@mediaqu.com>

--- a/res/xml/notification_drawer.xml
+++ b/res/xml/notification_drawer.xml
@@ -43,6 +43,13 @@
             android:fragment="com.android.settings.headsup.HeadsUpSettings"
             android:title="@string/category_heads_up" />
 
+    <ListPreference
+        android:key="smart_pulldown"
+        android:title="@string/smart_pulldown_title"
+        android:entries="@array/smart_pulldown_entries"
+        android:entryValues="@array/smart_pulldown_values"
+        android:persistent="false" />
+
     <PreferenceCategory
         android:title="@string/category_quick_access" >
 
