--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -132,6 +132,13 @@
     <string name="title_tile_power">Power Menu</string> 
     <string name="navring_action_power_menu">Power menu</string>
 
+    <!-- QuickSettings: Smart Pulldown -->
+    <string name="smart_pulldown_title">Smart pulldown</string>
+    <string name="smart_pulldown_summary">Open Quick Settings when there are no %1$s notifications present</string>
+    <string name="smart_pulldown_off">Off</string>
+    <string name="smart_pulldown_dismissable">Dismissable</string>
+    <string name="smart_pulldown_persistent">Persistent</string>
+
     <!--  Recents clear all -->
     <string name="recents_clear_all_button">Recents clear all button</string>
     <string name="show_recent_clear_all_button_title">Show clear all button</string>
