Settings: Wakelock Blocker (1/2)
Signed-off-by: Estiko <estiko@mediaqu.com>

--- a/res/xml/xoplax_settings.xml
+++ b/res/xml/xoplax_settings.xml
@@ -25,4 +25,12 @@
         android:title="@string/progressbar_title"
         android:icon="@drawable/ic_settings_progressbar" />
 
+    <!-- Wakelock Blocker -->
+    <PreferenceScreen
+        android:id="@+id/wakelock_blocker"
+        android:fragment="com.android.settings.xoplax.WakeLockBlocker"
+        android:icon="@drawable/ic_settings_wakelock_blocker"
+        android:layout="@layout/preference_wakelockblocker"
+        android:title="@string/wakelock_blocker" />
+
 </PreferenceScreen>
