--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -134,6 +134,9 @@
     <string name="noti_reminder_ringtone">Notify ringtone</string>
     <string name="noti_reminder_summary">Enter with a notification and set a reminder for the same</string>
 
+    <!-- Power menu screen recorder -->
+    <string name="power_menu_screenrecord_title">Screen record</string>
+
     <!-- QuickSettings fliptiles -->
     <string name="flip_qs_tiles_title">Flip tiles</string>
     <string name="flip_qs_tiles_summary">Flips the tiles on touch</string>
@@ -186,6 +189,8 @@
     <string name="screen_recorder_summary">Adjust screen recorder settings</string>
     <string name="screen_recorder_video_dimensions_title">Video size</string>
     <string name="screen_recorder_video_bitrate_title">Bitrate</string>
+    <string name="screen_recorder_record_audio_title">Record audio</string>
+    <string name="screen_recorder_record_audio_summary">Record audio from the microphone</string>
 
     <!-- video sizes -->
     <string name="screen_recorder_size_240x400">240x400</string>
