--- a/res/xml/notification_bg_pref.xml
+++ b/res/xml/notification_bg_pref.xml
@@ -1,23 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2015 XoplaX OS Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
+ 	<?xml version="1.0" encoding="utf-8"?>
+	<!-- Copyright (C) 2012 Slimroms Project
 	
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+	Licensed under the Apache License, Version 2.0 (the "License");
+	you may not use this file except in compliance with the License.
+	You may obtain a copy of the License at
 	
-    <ListPreference
+	http://www.apache.org/licenses/LICENSE-2.0
+	
+	Unless required by applicable law or agreed to in writing, software
+	distributed under the License is distributed on an "AS IS" BASIS,
+	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+	See the License for the specific language governing permissions and
+	limitations under the License.
+	-->
+	
+	<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+	
+	<ListPreference
 	android:key="notification_wallpaper"
 	android:persistent="false"
 	android:dialogTitle="@string/notification_wallpaper_title"
@@ -25,20 +24,20 @@
 	android:entries="@array/notification_wallpaper_entries"
 	android:entryValues="@array/notification_wallpaper_values"/>
 	
-    <ListPreference
+	<ListPreference
 	android:key="notification_wallpaper_landscape"
 	android:persistent="false"
 	android:dialogTitle="@string/notification_wallpaper_landscape_title"
 	android:title="@string/notification_wallpaper_landscape_title"
 	android:entries="@array/notification_wallpaper_landscape_entries"
-        android:entryValues="@array/notification_wallpaper_landscape_values"/>
+	android:entryValues="@array/notification_wallpaper_landscape_values"/>
 	
-    <com.android.settings.xoplax.SeekBarPreference
+	<com.android.settings.xoplax.SeekBarPreference
 	android:key="notification_wallpaper_alpha"
-        android:title="@string/notif_wallpaper_alpha_title" />
+	android:title="@string/notif_wallpaper_alpha_title" />
+	
+        <com.android.settings.xoplax.SeekBarPreference
+             android:key="notification_alpha"
+             android:title="@string/notif_alpha_title" />
 
-    <com.android.settings.xoplax.SeekBarPreference
-         android:key="notification_alpha"
-         android:title="@string/notif_alpha_title" />
-
-</PreferenceScreen>
+	</PreferenceScreen>
