--- a/res/values/xos_dimens.xml
+++ b/res/values/xos_dimens.xml
@@ -16,6 +16,7 @@
 -->
 <resources>
 
+    <!-- Lockscreen notification -->
     <!-- Minimal notification row height used to calculate max notification count -->
     <dimen name="notification_row_min_height">70dp</dimen>
 
