--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -59,22 +59,10 @@
             android:key="navigation_bar"
             android:title="@string/navigation_bar_category" >
 
-        <CheckBoxPreference
-            android:key="enable_nav_bar"
-            android:title="@string/navbar_enable_bar"
-            android:summary="@string/navbar_enable_bar_summary" />
-
-	<PreferenceScreen
-            android:key="navbar_dimen_settings"
-            android:fragment="com.android.settings.crdroid.NavbarDimenSettings"
-            android:title="@string/navbar_style_dimen_title"
-	    android:dependency="enable_nav_bar" />
-
         <PreferenceScreen
-            android:key="navigation_bar"
-            android:fragment="com.android.settings.cyanogenmod.NavBar"
-            android:title="@string/navigation_bar_title"
-            android:dependency="enable_nav_bar" />
+                android:key="navigation_bar"
+                android:fragment="com.android.settings.cyanogenmod.NavBar"
+                android:title="@string/navigation_bar_title" />
 
         <ListPreference
             android:key="navigation_recents_long_press"
@@ -83,24 +71,26 @@
             android:persistent="false" />
 
         <PreferenceScreen
+                android:key="navbar_dimen_settings"
+                android:fragment="com.android.settings.xoplax.NavbarDimenSettings"
+                android:title="@string/navbar_style_dimen_title" />
+
+        <PreferenceScreen
                 android:key="navigation_ring"
                 android:fragment="com.android.settings.cyanogenmod.NavRing"
-                android:title="@string/navigation_ring_title"
-                android:dependency="enable_nav_bar" />
+                android:title="@string/navigation_ring_title" />
 
         <com.android.settings.cyanogenmod.SystemSettingCheckBoxPreference
                 android:key="navigation_bar_left"
                 android:title="@string/navigation_bar_left_title"
                 android:summary="@string/navigation_bar_left_summary"
-                android:defaultValue="false"
-                android:dependency="enable_nav_bar" />
+                android:defaultValue="false" />
 
         <com.android.settings.cyanogenmod.SystemSettingCheckBoxPreference
                 android:key="navigation_bar_menu_arrow_keys"
                 android:title="@string/navigation_bar_arrow_keys_title"
                 android:summary="@string/navigation_bar_arrow_keys_summary"
-                android:defaultValue="true"
-                android:dependency="enable_nav_bar" />
+                android:defaultValue="true" />
     </PreferenceCategory>
 
     <PreferenceCategory
