--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -18,10 +18,9 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <CheckBoxPreference
-        android:key="disable_nav_keys"
-        android:title="@string/disable_navkeys_title"
-        android:summary="@string/disable_navkeys_summary"
-        android:defaultValue="false" />
+        android:key="enable_nav_bar"
+        android:title="@string/navbar_enable_bar"
+        android:summary="@string/navbar_enable_bar_summary" />
 
     <com.android.settings.cyanogenmod.ButtonBacklightBrightness
         android:key="button_backlight"
