--- a/res/xml/notification_drawer.xml
+++ b/res/xml/notification_drawer.xml
@@ -50,6 +50,12 @@
         android:entryValues="@array/smart_pulldown_values"
         android:persistent="false" />
 
+    <CheckBoxPreference
+        android:key="custom_status_bar_header"
+        android:title="@string/custom_statusbar_header_title"
+        android:summary="@string/custom_statusbar_header_summary"
+        android:defaultValue="false" />
+
     <PreferenceCategory
         android:title="@string/category_quick_access" >
 
