--- a/res/xml/xoplax_settings.xml
+++ b/res/xml/xoplax_settings.xml
@@ -40,4 +40,11 @@
         android:layout="@layout/preference_wakelockblocker"
         android:title="@string/wakelock_blocker" />
 
+    <!-- Advanced options -->
+    <PreferenceScreen
+        android:id="@+id/advanced_options_settings"
+        android:fragment="com.android.settings.xoplax.AdvancedSettings"
+        android:icon="@drawable/ic_settings_advanced"
+        android:title="@string/advanced_options_settings_title" />
+
 </PreferenceScreen>
