--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -171,7 +171,7 @@
     <string name="smart_pulldown_persistent">Persistent</string>
 
     <!--  Recents clear all -->
-    <string name="recents_clear_all_button">Recents clear all button</string>
+    <string name="recents_panel_settings_title" >Recents panel settings</string>
     <string name="show_recent_clear_all_button_title">Show clear all button</string>
     <string name="show_recent_clear_all_button_summary">Tick to show or untick to hide the clear all button within the recent applications screen</string>
     <string name="recent_clear_all_button_location_title">Clear all button position</string>
@@ -184,7 +184,7 @@
     <!-- Recents Ram Bar -->
     <string name="ram_bar">Recents RAM bar</string>
     <string name="ram_bar_note_title">Note</string>
-    <string name="ram_bar_note_summary">This RAM bar shows the actual android memory (RAM) utilization. Please note that having cached apps helps your device open apps much faster.</string>
+    <string name="ram_bar_note_summary">This RAM bar shows the actual android memory (RAM) utilization. Please note that having cached apps helps your device open apps much faster. For further explanations on how android memory (RAM) management works, check the help menu.</string>
     <string name="ram_bar_mode_title">Recents RAM bar mode</string>
     <string name="ram_bar_mode_dialog_title">Show on recents RAM bar</string>
     <string name="ram_bar_none">None</string>
@@ -201,6 +201,7 @@
     <string name="ram_bar_button_reset">Reset colors</string>
     <string name="ram_bar_reset">Reset</string>
     <string name="ram_bar_reset_message">Reset RAM bar style to default?</string>
+    <string name="ram_bar_settings_category">Ram Bar Settings</string>
 
     <!-- Screen recorder -->
     <string name="screen_recorder_title">Screen recorder</string>
