--- a/res/values/xos_arrays.xml
+++ b/res/values/xos_arrays.xml
@@ -148,6 +148,19 @@
         <item>1</item>
     </string-array>
 
+    <!-- Recent panel -->
+    <string-array name="recent_panel_scale_entries">
+        <item>@string/recent_panel_100</item>
+        <item>@string/recent_panel_85</item>
+        <item>@string/recent_panel_70</item>
+    </string-array>
+
+    <string-array name="recent_panel_scale_values" translatable="false">
+        <item>100</item>
+        <item>85</item>
+        <item>70</item>
+    </string-array>
+
     <!-- Recents RAM bar-->
     <string-array name="entries_ram_bar_mode">
         <item>@string/ram_bar_none</item>
