--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -261,6 +261,16 @@
     <string name="slim_recents_warning_message">SystemUI will restart to apply changes</string>
     <string name="recents_use_slim_title">Use for recents</string>
     <string name="recents_use_slim_summary">Use Slim Recents instead of default recents view</string>
+    <string name="recent_panel_category">Recent apps panel</string>
+    <string name="recent_panel_scale_title">Size</string>
+    <string name="recent_panel_scale_summary">Recent apps panel size in percent.</string>
+    <string name="recent_panel_100">100% (default)</string>
+    <string name="recent_panel_85">85%</string>
+    <string name="recent_panel_70">70%</string>
+
+    <!-- ATTENTION: RTL languages need to replace left with right -->
+    <string name="recent_panel_lefty_mode_title">Show on the left edge</string>
+    <string name="recent_panel_lefty_mode_summary">Show recent apps panel on the left edge.</string>
 
     <!-- Smooth ProgressBar -->
     <string name="progressbar_title">Custom progressBar</string>
