--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -179,6 +179,9 @@
     <string name="flip_qs_tiles_title">Flip tiles</string>
     <string name="flip_qs_tiles_summary">Flips the tiles on touch</string>
 
+    <!-- QS and navring last app -->
+    <string name="navring_action_last_app">Last app</string>
+
     <!-- QS and navring Power menu -->
     <string name="title_tile_power">Power Menu</string> 
     <string name="navring_action_power_menu">Power menu</string>
