Settings: Extend QS Options (1/2)
Signed-off-by: Estiko <estiko@mediaqu.com>

--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -279,6 +279,14 @@
     <string name="smart_pulldown_dismissable">Dismissable</string>
     <string name="smart_pulldown_persistent">Persistent</string>
 
+    <!-- QuickSettings style options -->
+    <string name="quicksettings_tiles_style">Quick settings style</string>
+    <string name="summary_quicksettings_tiles_style">Quick settings style options</string>
+    <string name="quicksettings_tiles_style_additional_options">Additional options</string>
+    <string name="tiles_per_row_title">Tiles per row</string>
+    <string name="tiles_per_row_duplicate_landscape_title">Scale landscape quantity</string>
+    <string name="tiles_per_row_duplicate_landscape_summary">Landscape view doubles tiles per row quantity</string>
+
     <!--  Recents clear all -->
     <string name="recents_panel_settings_title" >Recents panel settings</string>
     <string name="show_recent_clear_all_button_title">Show clear all button</string>
