--- a/res/values/xos_arrays.xml
+++ b/res/values/xos_arrays.xml
@@ -184,6 +184,19 @@
         <item>1</item>
     </string-array>
 
+    <!-- QuickSettings tiles per row -->
+    <string-array name="tiles_per_row_entries" translatable="false">
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+    <string-array name="tiles_per_row_values" translatable="false">
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
     <!-- Recent panel -->
     <string-array name="recent_panel_scale_entries">
         <item>@string/recent_panel_100</item>
