--- a/res/xml/xoplax_settings.xml
+++ b/res/xml/xoplax_settings.xml
@@ -18,6 +18,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/xoplax_settings_title">
 
+    <!-- Appbar -->
+    <PreferenceScreen
+        android:id="@+id/app_sidebar"
+        android:fragment="com.android.settings.xoplax.AppSidebar"
+        android:title="@string/app_sidebar_title"
+        android:icon="@drawable/ic_settings_appsidebar" />
+
     <!-- Custom ProgressBar -->
     <PreferenceScreen
         android:id="@+id/progressbar_settings"
