--- a/res/xml/lockscreen_notifications.xml
+++ b/res/xml/lockscreen_notifications.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 OmniKang
+<!-- Copyright (C) 2015 XoplaX OS Project
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceCategory
+        android:key="category_general"
         android:title="@string/general" >
         <CheckBoxPreference
             android:key="lockscreen_notifications"
@@ -62,7 +63,7 @@
             android:dependency="lockscreen_notifications"
             android:summary="@string/dismiss_all_summary" />
 
-        <com.android.settings.xoplax.AppMultiSelectListPreference
+        <com.android.settings.xoplax.lsn.AppMultiSelectListPreference
             android:key="excluded_apps"
             android:persistent="false"
             android:title="@string/excluded_apps_title"
@@ -80,7 +81,7 @@
             android:dependency="lockscreen_notifications"
             android:defaultValue="30" />
 
-        <com.android.settings.xoplax.NumberPickerPreference
+        <com.android.settings.xoplax.lsn.NumberPickerPreference
             android:key="notifications_height"
             android:dialogMessage="@string/notifications_height"
             android:title="@string/notifications_height"
@@ -114,4 +115,3 @@
             android:summary="@string/force_expanded_view_summary" />
     </PreferenceCategory>
 </PreferenceScreen>
-
