--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -80,6 +80,16 @@
         android:fragment="com.android.settings.WirelessSettings"
         android:icon="@drawable/empty_icon" />
 
+    <!-- Additional PAC-Rom Settings -->
+    <header android:title="@string/header_category_rom_settings" />
+
+    <!-- XoplaX OS settings -->
+    <header
+        android:id="@+id/xoplax_settings"
+        android:icon="@drawable/ic_settings_xoplax"
+        android:fragment="com.android.settings.xoplax.XoplaXSettings"
+        android:title="@string/xoplax_settings_title" />
+
     <!-- INTERFACE -->
     <header android:id="@+id/interface_section"
         android:title="@string/header_category_interface" />
@@ -107,14 +117,6 @@
         android:breadCrumbTitle="@string/themes_settings_title"
         android:fragment="com.android.settings.ThemeSettings"
         android:icon="@drawable/prd_ic_themepacks" />
-
-    <!-- XoplaX OS settings -->
-    <header
-        settings:includeXmlForSearch="@xml/xoplax_settings"
-        android:id="@+id/xoplax_settings"
-        android:icon="@drawable/ic_settings_xoplax"
-        android:fragment="com.android.settings.xoplax.XoplaXSettings"
-        android:title="@string/xoplax_settings_title" />
 
     <!-- Status Bar -->
     <header
