--- a/res/values/xos_strings.xml
+++ b/res/values/xos_strings.xml
@@ -228,6 +228,8 @@
     <string name="media_scanner_on_boot_disabled">Do not scan media</string>
 
     <!-- Navigation bar -->
+    <string name="navbar_enable_bar">Enable navigation bar</string>
+    <string name="navbar_enable_bar_summary">Enable the navigation bar</string>
     <string name="navbar_style_dimen_title">Dimensions</string>
     <string name="navbar_dimensions_reset_message">Reset all dimensions entries to default?</string>
     <string name="navigation_bar_height_title">Navigation bar height</string>
